# pract_qrcodes

./: CMakeLists.txt  README.md  auth.cpp  auth.h  db.h  dp.cpp  index.html  main.cpp  script.js  styles.css
